--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg-promise": "^7.4.1",
-    "session": "^0.1.0"
+    "request": "^2.83.0",
+    "session": "^0.1.0",
+    "weather-js": "^2.0.0",
+    "xml2js": "^0.4.19"
   }
 }
